[gd_scene format=3 uid="uid://csj7vcqrenjsi"]

[ext_resource type="Script" uid="uid://barqei8kroiys" path="res://Weapons/WeaponManager.gd" id="1_tj3qj"]
[ext_resource type="Resource" uid="uid://d31p6jsskwcfn" path="res://Weapons/Revolver.tres" id="2_psotp"]
[ext_resource type="ArrayMesh" uid="uid://bri6y2g7u3d2h" path="res://Weapons/Models/Revolver/Revolver.res" id="3_uof4y"]
[ext_resource type="ArrayMesh" uid="uid://bd7h6tcwyx7vd" path="res://Weapons/Models/Revolver/Cylinder.res" id="4_4qjwk"]
[ext_resource type="ArrayMesh" uid="uid://ca6drlyd55u36" path="res://Weapons/Models/Revolver/Battery.res" id="5_xd477"]

[node name="Weapon" type="Node3D" unique_id=1183526851]
transform = Transform3D(14, 0, 0, 0, -6.119594e-07, 14, 0, -14, -6.119594e-07, 0.25, -0.4, -0.5)
script = ExtResource("1_tj3qj")
weaponType = ExtResource("2_psotp")
swaySpeed = 1.0

[node name="WeaponMesh" type="MeshInstance3D" parent="." unique_id=192297091]
unique_name_in_owner = true
mesh = ExtResource("3_uof4y")

[node name="WeaponMagazine" type="MeshInstance3D" parent="." unique_id=1020052104]
unique_name_in_owner = true
mesh = ExtResource("4_4qjwk")

[node name="WeaponBolt" type="MeshInstance3D" parent="." unique_id=100677615]
unique_name_in_owner = true
mesh = ExtResource("5_xd477")

[node name="WeaponShadow" type="MeshInstance3D" parent="." unique_id=1117034354]
unique_name_in_owner = true
visible = false
mesh = ExtResource("3_uof4y")
